--- a/booknow.html
+++ b/booknow.html
@@ -290,7 +290,7 @@
             </li>
 
             <li>
-              <a href="mailto:contact@homeverse.com" class="contact-link">
+              <a href="mailto:anicsblushingbeauty@gmail.com" class="contact-link">
                 <ion-icon name="mail-outline"></ion-icon>
 
                 <span>anicsblushingbeauty@gmail.com</span>
