--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ Feel confident. Look stunning.
             </li>
 
             <li>
-              <a href="mailto:contact@homeverse.com" class="contact-link">
+              <a href="mailto:anicsblushingbeauty@gmail.com" class="contact-link">
                 <ion-icon name="mail-outline"></ion-icon>
 
                 <span>anicsblushingbeauty@gmail.com</span>
