--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <span>Your MakeUp Artist</span>
             </p>
 
-            <h2 class="h1 hero-title">Glow Like Never Before</h2>
+            <h2 class="h1 hero-title">HAPPY BIRTHDAY QUEEN 🥳👸</h2>
 
             <p class="hero-text">
               Unleash your inner beauty with Anics Blushing Beauty. From bridal and birthday glam to makeup classes, we create flawless looks for every occasion.
