--- a/index.html
+++ b/index.html
@@ -207,8 +207,11 @@
             <h2 class="h1 hero-title">HAPPY BIRTHDAY QUEEN 🥳👸</h2>
 
             <p class="hero-text">
-              Unleash your inner beauty with Anics Blushing Beauty. From bridal and birthday glam to makeup classes, we create flawless looks for every occasion.
-Feel confident. Look stunning.
+              You’re not just building a brand—you’re building a legacy.
+I’m so proud of the woman you are and the dreams you’re chasing.
+Keep shining, keep winning.
+Love you always!
+
             </p>
 
             <a href="booknow.html" class="btn" style="cursor: pointer; width: fit-content;">Make An Enquiry</a>
